syntax = "proto3";

// google事前定義proto propaty参照
import "google/protobuf/timestamp.proto";

// define API
service ShopService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc ListOrder(ListOrderRequest) returns (ListOrderResponse);
}

// define Order Model
message Order {
    enum PayMethod {
        UNKOWN = 0;
        CACHE = 1;
        CREDIT_CARD = 2;
        QR_CODE = 3;
    }

    string product_id = 1;
    int32 price = 2;
    PayMethod pay_method = 3;
    string by = 4;
    google.protobuf.Timestamp at = 5;
}

message CreateOrderRequest {
    string product_id = 1;
    Order.PayMethod pay_method = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message ListOrderRequest {
    string user_name = 1;
}

message ListOrderResponse {
    repeated Order orders = 1;
}